GUI Utils & Improvements, Depths description components, fix some warnings (#2951)