@@ -3,7 +3,6 @@ package com.playmonumenta.plugins.depths.abilities.dawnbringer;
 import com.playmonumenta.plugins.Plugin;
 import com.playmonumenta.plugins.classes.ClassAbility;
 import com.playmonumenta.plugins.depths.DepthsTree;
-import com.playmonumenta.plugins.depths.DepthsUtils;
 import com.playmonumenta.plugins.depths.abilities.DepthsAbility;
 import com.playmonumenta.plugins.depths.abilities.DepthsAbilityInfo;
 import com.playmonumenta.plugins.depths.abilities.DepthsTrigger;
@@ -14,11 +13,14 @@ import com.playmonumenta.plugins.utils.DamageUtils;
 import com.playmonumenta.plugins.utils.EntityUtils;
 import com.playmonumenta.plugins.utils.InventoryUtils;
 import com.playmonumenta.plugins.utils.ItemUtils;
-import java.util.Arrays;
+import com.playmonumenta.plugins.utils.StringUtils;
 import java.util.Collection;
 import java.util.List;
 import java.util.WeakHashMap;
-import org.bukkit.ChatColor;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.TextComponent;
+import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.TextColor;
 import org.bukkit.Color;
 import org.bukkit.Material;
 import org.bukkit.Particle;
@@ -37,7 +39,6 @@ import org.bukkit.potion.PotionType;
 public class LightningBottle extends DepthsAbility {
 	public static final String ABILITY_NAME = "Lightning Bottle";
 	public static final String POTION_NAME = ABILITY_NAME;
-	public static final String POTION_META_DATA = "LightningBottle";
 	public static final double[] DAMAGE = {6, 7.5, 9, 10.5, 12, 20};
 	public static final double[] VULNERABILITY = {0.1, 0.125, 0.15, 0.175, 0.2, 0.25};
 	public static final double SLOWNESS = 0.2;
@@ -50,7 +51,7 @@ public class LightningBottle extends DepthsAbility {
 		new DepthsAbilityInfo<>(LightningBottle.class, ABILITY_NAME, LightningBottle::new, DepthsTree.DAWNBRINGER, DepthsTrigger.PASSIVE)
 			.linkedSpell(ClassAbility.LIGHTNING_BOTTLE)
 			.displayItem(new ItemStack(Material.BREWING_STAND))
-			.descriptions(LightningBottle::getDescription, MAX_RARITY);
+			.descriptions(LightningBottle::getDescription);
 
 	private final WeakHashMap<ThrownPotion, ItemStatManager.PlayerItemStats> mPlayerItemStatsMap;
 
@@ -131,20 +132,20 @@ public class LightningBottle extends DepthsAbility {
 		potionMeta.setBasePotionData(new PotionData(PotionType.MUNDANE));
 		potionMeta.addItemFlags(ItemFlag.HIDE_POTION_EFFECTS); // Hide "No Effects" vanilla potion effect lore
 		potionMeta.setColor(Color.YELLOW);
-		potionMeta.setDisplayName(ChatColor.AQUA + POTION_NAME); // OG Alchemist's Potion item name colour of &b
-
-		List<String> loreList = Arrays.asList(
-			ChatColor.DARK_GRAY + "A unique potion used by Dawnbringers." // Standard Monumenta lore text colour of &8
-		);
-		potionMeta.setLore(loreList);
+		potionMeta.displayName(Component.text(POTION_NAME, NamedTextColor.AQUA)); // OG Alchemist's Potion item name colour of &b
+		potionMeta.lore(List.of(Component.text("A unique potion used by Dawnbringers.", NamedTextColor.DARK_GRAY)));
 
 		itemStack.setItemMeta(potionMeta);
 		ItemUtils.setPlainTag(itemStack); // Support for resource pack textures like with other items & mechanisms
 		return itemStack;
 	}
 
-	private static String getDescription(int rarity) {
-		return "For every " + KILLS_PER + " mobs that die within " + DEATH_RADIUS + " blocks of you, you gain a lightning bottle, which stack up to " + MAX_STACK + ". Throwing a lightning bottle deals " + DepthsUtils.getRarityColor(rarity) + (float) DAMAGE[rarity - 1] + ChatColor.WHITE + " magic damage and applies " + (int) DepthsUtils.roundPercent(SLOWNESS) + "% slowness and " + DepthsUtils.getRarityColor(rarity) + DepthsUtils.roundPercent(VULNERABILITY[rarity - 1]) + "%" + ChatColor.WHITE + " vulnerability for " + DURATION / 20 + " seconds.";
+	private static TextComponent getDescription(int rarity, TextColor color) {
+		return Component.text("For every " + KILLS_PER + " mobs that die within " + DEATH_RADIUS + " blocks of you, you gain a lightning bottle, which stack up to " + MAX_STACK + ". Throwing a lightning bottle deals ")
+			.append(Component.text(StringUtils.to2DP(DAMAGE[rarity - 1]), color))
+			.append(Component.text(" magic damage and applies " + StringUtils.multiplierToPercentage(SLOWNESS) + "% slowness and "))
+			.append(Component.text(StringUtils.multiplierToPercentage(VULNERABILITY[rarity - 1]) + "%", color))
+			.append(Component.text(" vulnerability for " + DURATION / 20 + " seconds."));
 	}
 
 }
